Update the demo page a little

--- a/demo.html
+++ b/demo.html
@@ -6,9 +6,11 @@
 </head>
 
 <body>
-<h1>Waterfall</h1>
+<h1>Waterfall.js</h1>
 
 <div id="waterfall"></div>
+<p>A waterfall-style spectrum display. It should be displaying whatever your computer's microphone is "hearing".</p>
+<p>The source is on <a href="https://github.com/mgdm/waterfall.js">Github</a>.</p>
 <script src="waterfall.js"></script>
 <script>
 (function(window, document, undefined) {
